# laas_navigation

./: .gitignore  CMakeLists.txt  package.xml
launch/: custom_rosconsole.conf  map_baselink_transform.launch  map_optitrack_transform.launch
maps/: copy of laas_adream.pgm  crowd.pgm  crowd.yaml  crowd_new.xcf  crowd_new.yaml  laas_adream.pgm  laas_adream.yaml  laas_adream.yaml~  laas_adream_new.pgm  laas_adream_new.xcf  laas_adream_new.yaml  laas_adream_simplified.pgm  laas_adream_simplified.yaml  laas_adream_simplified_offset.xcf  laas_adream_siplified.xcf  laas_pepper.pgm  laas_pepper.yaml  narrow.pgm  narrow.xcf  narrow.yaml  prova_laas_adream.pgm
morse_pepper_launch/: morse_pepper_nav.launch
morse_pepper_move_base_config/: global_costmap_params.yaml  hateb_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
morse_pr2_launch/: fake_humans.yaml  morse_pr2_laas_adream_locate.launch  morse_pr2_laas_adream_locate_nav.launch  morse_pr2_laas_adream_locate_nav_humans.launch  morse_pr2_nav.launch  morse_pr2_nav_humans.launch  morse_pr2_slam.launch  morse_pr2_slam_nav.launch
morse_pr2_move_base_config/: .hateb_working_params_mar_2_2020.yaml.swp  dwa_planner_params.yaml  global_costmap_params.yaml  hanp_local_planner_params.yaml  hateb_local_planner_params.yaml  hateb_local_planner_params_approach.yaml  hateb_new_testing_Jan_21_2021_test.yaml  hateb_new_testing_July_2020.yaml  hateb_new_testing_July_29_2020.yaml  hateb_new_testing_July_29_2020_static_visualize.yaml  hateb_new_testing_Sept_11_2020_bestforstatic_visualize.yaml  (+13 more)
rviz/: pr2_nav.rviz  (+2 more)
(+57 files in other folders)
