<?xml version="1.0"?>
<package>
  <name>laas_navigation</name>

  <version>0.0.1</version>

  <description>configuration and launch fiels for navigation package for the laas robots</description>

  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
